# scout

./: .gitignore  README.md  main.py  pyproject.toml  timeline.md
api/v1/: app_state.py  dependencies.py
api/v1/data_access/: embeddings.py  firecrawl.py  index.py  langfuse.py  openai.py  supabase.py
api/v1/routes/: __init__.py  extract.py  outreach.py  startups.py
api/v1/services/: __init__.py  embedding.py  extract.py  outreach.py  scrape.py  startups.py
