[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faiss-cpu",
    "fastapi[standard]>=0.135.2",
    "firecrawl-py>=4.21.0",
    "instructor>=1.14.5",
    "langfuse>=4.0.1",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "supabase>=2.28.3",
]
